[tool.poetry]
name = "BeeFocused"
version = "1.0.0"
description = "https://heyfocus.com/ integration with https://www.beeminder.com/"
authors = ["Shawn Koh <shawn@shawnkoh.sg>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
